--- a/AI_BOOT_CAMP_NIELIT.ipynb
+++ b/AI_BOOT_CAMP_NIELIT.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMJd7Hker3KsKHPKforQXT+",
+      "authorship_tag": "ABX9TyOiOtw8CtTGlTmnehT3ZrC2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,7 +34,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_PRy7ojRQQQS",
-        "outputId": "344f68ed-280e-400b-aa6c-503ac9933a65"
+        "outputId": "bfd367dd-1695-420b-de62-efc2e6b86b99"
       },
       "outputs": [
         {
@@ -63,7 +63,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "goq0dv1QREV6",
-        "outputId": "e97e03ff-72de-45d3-e9c6-2c63857f24d6"
+        "outputId": "160c3a0f-ecb8-4b1e-b904-2b5f8d10e45d"
       },
       "execution_count": 2,
       "outputs": [
@@ -71,9 +71,9 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Enter first number: 6\n",
-            "Enter second number: 4\n",
-            "The sum is: 10\n"
+            "Enter first number: 7\n",
+            "Enter second number: 9\n",
+            "The sum is: 16\n"
           ]
         }
       ]
@@ -93,7 +93,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FP1OE7-TRZT7",
-        "outputId": "3b16d025-ff57-478d-9af0-260e20894541"
+        "outputId": "e0bdf670-8685-44aa-f584-d66968c86461"
       },
       "execution_count": 3,
       "outputs": [
@@ -101,21 +101,12 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Enter first number: 5\n",
-            "Enter second number: 8\n",
-            "The product is: 40\n"
+            "Enter first number: 8\n",
+            "Enter second number: 1000075\n",
+            "The product is: 8000600\n"
           ]
         }
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "# New Section"
-      ],
-      "metadata": {
-        "id": "YEpQP1aNRBo3"
-      }
     }
   ]
 }
